carros_uwsgi.ini

--- a/carros_uwsgi.ini
+++ b/carros_uwsgi.ini
@@ -7,4 +7,5 @@ master          = true
 processes       = 10
 socket          = /var/www/carros/carros.sock
 chmod-socket    = 666
+http            = :80
 vacuum          = true
